--- a/compose/src/main/res/values/strings.xml
+++ b/compose/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">compose</string>
+    <string name="drawer_category">Category</string>
+    <string name="drawer_search">Search</string>
+    <string name="drawer_article">Article</string>
 </resources>
